--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WebRTC Chat</title>
+  <title>kubicord</title>
 </head>
 <body>
-  <h1>WebRTC Chat Test</h1>
+  <h1>kubicord chat with webRTC</h1>
   <button id="connectBtn">Bağlan</button>
   <button id="sendOfferBtn">Teklif Gönder</button>
 
