--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>kubicord</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <h1>kubicord chat with webRTC</h1>
-  <button id="connectBtn">Bağlan</button>
-  <button id="sendOfferBtn">Teklif Gönder</button>
-
-  <!-- Chat mesajlaşma kutusu -->
-  <input type="text" id="chatInput" placeholder="Mesaj yaz...">
-  <button id="sendMsgBtn">Mesaj Gönder</button>
-  <div id="chatBox"></div>
-
-  <!-- JavaScript dosyasını burada çağırıyoruz -->
+<body class="bg-dark text-light">
+  <div class="container mt-5">
+    <h1 class="text-center">kubicord chat with WebRTC</h1>
+    <div class="form-group">
+      <label for="nickname">Takma Ad</label>
+      <input type="text" id="nickname" class="form-control" placeholder="Takma Ad Gir" required>
+    </div>
+    <button id="connectBtn" class="btn btn-primary btn-block">Bağlan</button>
+    <button id="sendOfferBtn" class="btn btn-secondary btn-block mt-2">Teklif Gönder</button>
+    
+    
+    <div id="chatBox" class="mt-3 border p-3 bg-light text-dark" style="height: 300px; overflow-y: scroll;"></div>
+  </div>
+  <div class="form-group mt-3">
+    <input type="text" id="chatInput" class="form-control" placeholder="Mesaj yaz...">
+  </div>
+  <button id="sendMsgBtn" class="btn btn-success btn-block">Mesaj Gönder</button>
   <script src="app.js"></script>
 </body>
 </html>
